fix wrong color variables

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 :root {
-  --background-color-main: #e5e5e5;
-  --background-color-secondary: #f9f3f5;
+  --background-color-main: #f9f3f5;
+  --background-color-secondary: #e5e5e5;
   --background-color-skill-first: #fdfdfd;
   --background-color-skill-first: #fce8e6;
   //   background: radial-gradient(51.33% 49.78% at 49.47% 44.58%, #FDFDFD 0%, #FCE8E6 100%);
